2010-05-13  Takeshi Yoshino  <tyoshino@google.com>

        Reviewed by Kent Tamura.

        Update text_expectations.txt for Chromium
        fast/forms/input-text-paste-maxlength.html is flaky on Linux Debug
        See http://code.google.com/p/chromium/issues/detail?id=44150 for detail.

        * platform/chromium/test_expectations.txt:

2010-05-13  Takeshi Yoshino  <tyoshino@google.com>

        Reviewed by Kent Tamura.

        Update text_expectations.txt for Chromium
        fast/events/standalone-image-drag-to-editable.html is flaky on Mac Debug
        See http://crbug.com/44149 and http://crbug.com/37896 for detail.

        * platform/chromium/test_expectations.txt:

2010-05-13  Takeshi Yoshino  <tyoshino@google.com>

        Reviewed by Shinichiro Hamaji.

        Update test_expectations.txt for Chromium.
        fast/forms/implicit-submission.html is flaky on Linux.
        See http://crbug.com/43890 for detail.

        * platform/chromium/test_expectations.txt:

2010-05-13  Martin Robinson  <mrobinson@igalia.com>

        No review.

        [GTK] css1/color_and_background/background_attachment.html fails on the 32-bit debug bot
        https://bugs.webkit.org/show_bug.cgi?id=39101

        * platform/gtk/Skipped: Skip failing test.

2010-05-13  Martin Robinson  <mrobinson@igalia.com>

        No review. Finish adding css1 baselines for GTK+.

        * platform/gtk/Skipped: Unskip tests which now have baselines.
        * platform/gtk/css1/basic/class_as_selector-expected.txt:
        * platform/gtk/css1/box_properties/width-expected.txt: Added.
        * platform/gtk/css1/cascade/cascade_order-expected.txt: Added.
        * platform/gtk/css1/cascade/important-expected.txt: Added.
        * platform/gtk/css1/classification/display-expected.txt: Added.
        * platform/gtk/css1/classification/list_style-expected.txt: Added.
        * platform/gtk/css1/classification/list_style_image-expected.txt: Added.