@@ -1,0 +1,26 @@
+<!DOCTYPE html>
+
+<html>
+<head>
+  <style type="text/css" media="screen">
+    body {
+      background-color: silver;
+      height: 1000px;
+    }
+    
+    .box {
+        height: 100px;
+        width: 100px;
+        margin: 10px;
+        padding: 5px;
+        background-color: blue;
+    }
+  </style>
+</head>
+<body>
+
+    <div class="box">
+    </div>
+    
+</body>
+</html>
